# requests-default

./: .gitignore  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
requests_default/: __init__.py  requests_default.py
source/: conf.py  index.rst
source/source/: modules.rst  requests_default.rst  test.rst
test/: test_requests_default.py
