[tool.poetry]
name = "requests-default"
version = "0.1.1"
description = "Request for default"
authors = ["geonwoo.kim"]
readme = "README.md"
homepage = "https://github.com/ultimatelife/requests-default"
repository = "https://github.com/ultimatelife/requests-default"
documentation = "https://github.com/ultimatelife/requests-default"
keywords = ["requests", "requests-default"]
classifiers= [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.16.0"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.7.0"
tox = "^3.24.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
